Fix time spacing on blog articles

--- a/src/styles/06-components/_flow.scss
+++ b/src/styles/06-components/_flow.scss
@@ -12,7 +12,7 @@
     margin-block-start: var(--space-xs-s);
   }
 
-  >time+:is(h2, h3, h4):not(:first-child) {
+  >time+:is(h1, h2, h3, h4):not(:first-child) {
     margin-block-start: var(--space-2xs);
   }
 }
